--- a/service-a/src/main/resources/application.properties
+++ b/service-a/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 server.port=8081
+
+spring.datasource.url= jdbc:postgresql://localhost:5432/liquibase
+spring.datasource.username= postgres
+spring.datasource.password= password
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= validate
