correct liquibase.properties

--- a/liquibase/liquibase.properties
+++ b/liquibase/liquibase.properties
@@ -26,22 +26,22 @@ changeLogFile=changelog.xml
 liquibase.command.url=jdbc:postgresql://localhost:5432/liquibase
 
 # Enter the username for your Target database.
-liquibase.command.username: postgres
+liquibase.command.username= postgres
 
 # Enter the password for your Target database.
-liquibase.command.password: password
+liquibase.command.password= password
 
 #### Enter the Source Database 'referenceUrl' information ####
 ## The source database is the baseline or reference against which your target database is compared for diff/diffchangelog commands.
 
 # Enter URL for the source database
-liquibase.command.referenceUrl: jdbc:h2:tcp://localhost:9090/mem:integration
+liquibase.command.referenceUrl= jdbc:h2:tcp://localhost:9090/mem:integration
 
 # Enter the username for your source database
-liquibase.command.referenceUsername: dbuser
+liquibase.command.referenceUsername= dbuser
 
 # Enter the password for your source database
-liquibase.command.referencePassword: letmein
+liquibase.command.referencePassword= letmein
 
 # Logging Configuration
 # logLevel controls the amount of logging information generated. If not set, the default logLevel is INFO.
