add spring security and renaming package

--- a/service-b/build.gradle
+++ b/service-b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'java'
 }
 
-group 'io.x99'
+group 'io.x99.service_b'
 version '1.0-SNAPSHOT'
 sourceCompatibility = '17'
 
@@ -17,13 +17,17 @@ ext {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'io.github.openfeign:feign-okhttp'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
 }
 
 dependencyManagement {
@@ -31,7 +35,6 @@ dependencyManagement {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
 }
-
 
 tasks.named('test') {
     useJUnitPlatform()
