--- a/vue-client/package.json
+++ b/vue-client/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "keycloak-js": "^20.0.0",
     "vue": "^3.2.41"
   },
   "devDependencies": {
