add keycloak to authenticate request

--- a/service-a/src/main/resources/application.properties
+++ b/service-a/src/main/resources/application.properties
@@ -9,3 +9,10 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto= validate
+
+# key cloak
+keycloak.realm = myrealm
+keycloak.auth-server-url = http://localhost:8180
+keycloak.resource = spring-app
+keycloak.bearer-only = true
+keycloak.public-client= true
