--- a/.gitignore
+++ b/.gitignore
@@ -43,9 +43,17 @@ out/
 ### git archive ###
 *.zip
 
+### Mac ###
+.DS_Store
+
+### Maven
+/target
+
 #####
 # NodeJS
 #####
 
 # Dependency directories
 node_modules/
+
+.DS
