Feature/user login (#15)
* remove unused files

* update database schemas to support user login and product info

* correct liquibase.properties

* rename user object to product object

* update test for renaming user to product

* adjust price validation

* send bad request when BadRequestException occurred

* renaming package

* add spring security and renaming package

* rename package

* add keycloak

* init keycloak application in vue

* display user info and add logout button

* import realms on start keycloak

* add keycloak to authenticate request

* authorize endpoint based on user role

* generate new realm for current environment

* add readme for keycloak usage

* update usage for adding authorization

* allow only admin to add or delete product

* rename  name entity to product and apply token when make request to backend

* update vue-client image

* ignore mac files

* update realm file

* remove users table

Co-authored-by: Rattapong K <rattapongk@99x.io>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,17 @@ services:
       - '5432:5432'
     volumes:
       - postgres:/data/postgres
+  keycloak:
+    container_name: keycloak_container
+    image: quay.io/keycloak/keycloak:20.0.0
+    command: start-dev --import-realm
+    environment:
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+    ports:
+      - '8180:8080'
+    volumes:
+      - ./realm/myrealm.json:/opt/keycloak/data/import/myrealm.json
+
 volumes:
   postgres:
