--- a/service-a/build.gradle
+++ b/service-a/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'groovy'
 }
 
-group 'io.x99'
+group 'io.x99.service_a'
 version '1.0-SNAPSHOT'
 sourceCompatibility = '17'
 
@@ -20,6 +20,12 @@ dependencies {
     testImplementation platform("org.spockframework:spock-bom:2.3-groovy-4.0")
     testImplementation "org.spockframework:spock-core"
 
+    // dependencies for keycloak
+    implementation platform('org.keycloak.bom:keycloak-adapter-bom:20.0.0')
+    implementation 'org.keycloak:keycloak-spring-security-adapter:20.0.0'
+    implementation 'org.keycloak:keycloak-spring-boot-starter'
+
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     compileOnly 'org.projectlombok:lombok'
