apply basic auth in feign client

--- a/service-b/src/main/resources/application.properties
+++ b/service-b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ server.port=8082
 # Feign Client
 feign.okhttp.enabled=true
 service-a.url=http://localhost:8081
+service-a.username=service-a
+service-a.password=password
 
 # keycloak
 keycloak.realm = myrealm
