--- a/vue-client/package.json
+++ b/vue-client/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "keycloak-js": "^20.0.0",
+    "pinia": "^2.0.23",
     "vue": "^3.2.41"
   },
   "devDependencies": {
