--- a/vue-client/package.json
+++ b/vue-client/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "axios": "^1.1.3",
@@ -14,6 +15,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.2",
+    "cypress": "^10.11.0",
     "vite": "^3.1.8"
   }
 }
